// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwapperNodechainClient BTC get 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "txHashes": Array [
      "6f637d18b414a1e696b476939e9483d2bf4d4b0d9d0457b78d17c847cedfb3ce",
      "fee87a4c414b6d0c42a3e9f0f75902d43fa1635ed30fe85e33a847774d92623e",
      "58a43cf40d7d04f8739b3151210643914e5ec565ad45643c5687ac342098e9f3",
      "1d008ef45f4dd8d39fd9b79e1bb4cb108da15567511ec09246e97aeed8db96f8",
      "395bfeee300c9a5c7136206853e05cc834310407b7817535d8681051ed2bb633",
      "20d792489186f5399b6776d3f65c3eaa25bed0f288a033cdd291b120d9943a47",
      "5ca409f31d6c6063585546bfbf10f8ebe1652142adfc1525437d1884984851ce",
      "00ba1adcb76731de6d78a1453c3867486993b504645e8f38070fee9765657aa7",
      "033bc810730fc622252105aace5f9ae5c462d2f4ae433bc3bf9946f7033fd4f0",
      "b96905907e79263e115381fcd25d878a09f98d3e49ca338204d128c4a5c96814",
      "b17efd33c454d1f4f083bb54f513bdd2e2cdb714bb6d01862dc18f8963999735",
      "968d29d71d858074a925b117a155e85e5b95162640b3227183f24ac3d0c4d0af",
      "88f1c797cf1a50b7f53d2744ba774be68a9ba70d638742d56349422371ae195b",
      "ce20b43825a0c81e700ac6333c29c2f687cb6d533a50199b82e611591f95c4c3",
      "ed3f2f63ab16c8b9f6655b92886da82e40f8c80846c476179bd837b28a913f28",
      "6855f95c43382ab555cb6e0522e834f63edae3c303e2d8a9d35c042216d5c737",
      "20d5d6b2108bf1a998d8013ab3c046d95989e8a44565fb40295adcb00268da5f",
      "ea068d2bf76d591836dc4a63fad4bb14feaa9b2308b5b1f88dbd1fb2d996380c",
      "3a3ba6517f4303e7f85194fbcb00bfcea0f85c1c84e88d164f09967bd7bad1d8",
      "84ee151a5318298616f1bbd9391f52c347300cc3ee6d0fe81f44432205374607",
      "4576c9efec439fe8868787d46db1190c17be78d255a5d88e0dfcaf13088b2b8c",
      "5d8f38a0fe655c56a7f1ac5fe453398d7d2f4479417f199449c92a7347170006",
      "1c3c0a78030b5075a40a9cb7be4e4b09993b5c3c693b0b5b9a0e50f788c4ca08",
      "12885b0157589a908de899e968a72b848d3f7a735247257c7fda2b6cc83c0149",
      "06217d452005ddbe7b487bba74b1a3173fbc2b8b21be73869db04e5c1a9f373e",
      "3ec2666a62ee0ea13ba44178d152d48307dc6f37f538afe09a274f57ceaaf928",
      "150f93a4c149998d096e1c2edf5d51a20127d5e12f1418f1bc9ad16a0dfe77d6",
      "ee093198001c9d88f898215a35ce516af71e98dd55c32305a36da4ba17cadabe",
      "f3588237cc2c6461a013bcf97f5d3e07ba65e6e70255a87fd5636d201e6954cd",
      "31a21653ed090a3e5fc9e52aab12b8ce7af1ccea098db4167335893d5513706a",
      "a37c8add0f781b7810f21c06cd35e71ba1a4a40d138dfc15024738a4c50e7cb3",
      "7dbd1994a43943907247725337e1564ebb9076b24fd1ebc5ae9ec220034cb4b6",
      "4d6408b93d7a90d9005bd76dc2681b642fae8e36abf2978048dc5ff75d5aa48f",
      "14634fac17357c3b4af4037d26c4e00c15098e38cf2ff90874ece7a34e0b15d7",
      "276069b2242392ee9f2ff41012b6d7f9d35d3884ea4040d75901a418ef3e158b",
      "e3da73e049a10a4145c746d63aa26e3025169b4ad4261df627f1f544ab7cd6c2",
      "07fa6134ee5ac54bfd1f0e8951ce004d9be68d2dc036483d7093cf894911aa65",
      "8f35724e8dfe270531e00be1faa0da539c25a5a370888370034aa5568d39f2c9",
      "fe7485592351652e8fe439d1e9c0481bd00ca07a212986a19b41ac6e82636d45",
      "6f575046ab4d920a6ec8d833ba4b91cc59d1aa09a98583bfcdb3fc02475e507d",
      "138ce4620a031c2c3a193e8abe42398049308e844d15bbd7e37166a6bd3b9456",
      "39e9b363ad3b2db119db80ca95d58b72dd8d1848d57405fcf2ff5f0a8f61ba49",
      "4ce09252f9e7da2c2dc9ce750d41357c7922419ef12293299ddc12ab52a663a6",
      "b673715ebc0a33d30365b675bd4a2ab19e69798f609eb505a20700e8949e2bd8",
      "3fa844c3b39793e5a07f25df0c1ec4751feabd8cf7703aee4f18e9c633bfb43a",
      "06dd2b7905e09c7bc113ddd0a569baf8736cab0e7b5bdccda46b238c388447a7",
      "51d8f6e59b428de8d372778f3ec00113db065ef29b605eb328c483a48702852b",
      "61e5bad671c9bf157d5d35421684ec307d3976d51db604bbbac1d108ef0c1cbd",
      "23b0d15e8e845dcd13b786fcc41de0e1a1c95d78ef6008cc8ab4ef687520accf",
      "7547fcea470efe65ff86ccde72b7e8d6915bb639a9641c6128a4eb3ec06c41e3",
      "a3058cd5e453236e93737f144756cbecbc18b17920454176a8f094496b5e8f8f",
      "38c100df1d81702a7593bcdc0f96caf3fe2c248eaa72ab26b20a5fb8c4c9ddd6",
      "7e7ec1c6a5a7f72118175570111f89b20b7fee9dd5cef0bec50ebad39190b506",
      "75e3467fe3ec274871298a9a38fbf485a34f1e8747af025b45cb0c5164ed7372",
      "32da39c0bf26aaa6759baad81ab2ddef32c6a6d97742863fc017d68c5b758b95",
      "519ad3371582101171cb1073852220207564093f787fc4a6435e9d8bcf2fc55c",
      "43d2a04acda03e117448962e7f221a95c7d6335ad5254f0a81ec63a6d29208b7",
      "684f4f630b531ffd5ff73f2491e81ad7e7cfad74a3657630e12ad11afdefd702",
      "4850c1ce6f4d298ce418b488153c36c93cf245bd698bfc85645368825a5608b8",
      "348b2e3894861e8c50fc91bc11cac8c0b903dc4c8d787cb08a5c7fd89f755498",
      "0d2d4a51d0f6e5497cc57f8fd5026b90635efa3b475ac532b95969ee00c012c4",
      "d786d0974328280eaec322089011876f9c7a52114c0740b71ca8a415e35992e0",
      "e53a2aa2ca59f17583070e1f64ebc51f781a9b09c7b88c6e94c4a6ee77e07ba9",
      "7eb615327c46eaec3ca3b129f055446a9e487bbc09c11452b5bf755cb7727fca",
      "373d36dd6edb7ae81623ba2850a4fe054b793676315163530fb00664a85477d4",
      "5168634843a4cc82c29f6e2ffb722d826b5ebb537c4816051d3bdb5441deeb9c",
      "298075e2891653a011cdbbf366617d495d4bb3718e97007575895d352d539572",
      "f2aae0171e149e57a0658176e1d23ac87d441391c4ca530b7f90d52431ac3598",
      "1ea8ec56ee992cca5bd922149045e07949ddbb8a7b473fcc046c244fe17ff22f",
      "ccd96480a938640c137fed84ae0220c3dd7f98753a193d738e1a16bc684684da",
      "a7ddfa634c14eef2169be1b0c6d34d1c92c9daa9b1c0906330f9aa56cd90f072",
      "96fe1749044eb9faf82e085a357ae71a0e86c56026c7fac607cc7fa1cdd1a4b2",
      "56baaf36cf3d0d8a60ad0a3a6584a21f6b18743c5e86a12848d3ce792b0e670b",
      "0466a103cd84004e2d74d7111fa914a81ca9879e56f8526cdcdfbf46a5c3ebad",
      "637c8bf3c7c4e098eeab69f17b5b0c5203c4d6862caaf9a9d77042b77969f448",
      "8674672f48f28997870e02d1e50cd46cf1366134bc58696353208c7ffcb2a1c0",
      "418d231449135d1b2ffd0f8c1f5e42839ae265834e7a8fa34fb2af8522ffcbb3",
      "ada0de532d292b0c0848fff8f5e83e00b5726509d2c4689e197a7091b7d26f7a",
      "694ccf1202b56627d3d198d50ab311faa6e38db457337e1e7b4b70bacafd9273",
      "23c073e8ec5638a7a160b493b961aee35febbb1e8af0e877aa773b9ac099ba72",
      "b554409d43ae23a63bc6aa9cdc28872fcf5e302ba8546ba59b63104f41dce0dd",
      "25025e182d3a773f579e39d6519ec1ffffe60fc35fb4ab0c3cd132d8a66ed170",
      "d122b25a286194dae4f2fb4ac2485c6a9d52b64b5eb3e925d2258662b552d4ba",
      "9a05775aeed8ef370c87224bddb5bf8d810a296a5978f570f844b1f172b3abd8",
      "6facf06e60a5d759a41edaba8f34c0885578f965d86dbf93e65cc85d76b97081",
      "78de3b7373f99a9386d85e0e76b99b7f9c7e0d3dd90851c28360430584de76ff",
      "de6662f5b5d00d5b5fdd6fdc5b0cfe196c883b8d38f67e1c0a62d15cf02c1aef",
      "961077322d099a0ba7baa4cd1819fcc27b6552c2cd6c755706460e7361e1ad3a",
      "68ba7234b165ddfc884225fb274f713750abf6bd6c7deb1c5fe2b56c1f279f84",
      "9eadd82ee81195ec2eba67dad6a2ea29569ba67a095d888766a8e1a57d86bfcc",
      "a30a7841fc5e6676714e183eaa8a13110a7a1672a4b3017df93a6aa10a7d2e2b",
      "beb7b67b6f1eeaf01cecd8ead4afb4c6df6867cbb591b6827118fd9521485d21",
      "a5d957be1a09b597347826ebd877ffdc46076222523aad405ecd7cdedd0e5691",
      "aaa5886dd2d72f12ba3f2f1308ac034a5d718286dffeec2feff4ed1816e38d77",
      "b57f6e6add2a67114845f62bebfe6e696b416d0947262094877057d94b6a6c71",
      "4130a23b3f9248632126964acd7ada2bd3ca4c179526b4f4624d12def82c248a",
      "aa76d8152975cc6362a7fdd866db3daa878acdf6a8f8789d5ef631a9df3d1f05",
      "a72c0a8a0636d310acc1b6729fb43c4d6d4db9a4f04ab54544870a8271c67e38",
      "361eaed0cddc8aa549cda234cf379427a7f271a7c2161d3f686428c6c0866101",
      "a2489a7791414f9ce5466fb48cdb220d61acbec271f47028dc5f55f34ebe0098",
      "b94a11602b7410675ea221ec265b874b39d5066360b5f30f67008e3f83c4ab4e",
      "dbc262dd737169f8f5592e2cd6e4074885d2684ae55cef5dbe86f5a35d3476cc",
      "b6a4b89bfa1739ec0e8a74b671aad038460a3f3536efe327ed84782391aafa1d",
      "07daa1175296cc1fe5fc162acf7190720fe82dd10dd19244b9023531334084cf",
      "1faf61be1a1139c2533df9b836e48ae1a4ab6224db071460285e6d0bbf09fef2",
      "694a7c92f47fad22c5d057da13a6c854a2a21377ca8c02c4eadaffe50be38eb0",
      "fed193bc95d5f480e646911d1385eea455b07586172d781d9fe568a9e9f3c96c",
      "475abf2e5d0689d442369eb280d387885ce75d64854234ce36e50b9b365698be",
      "4618cedb277263bdc1ae247b07785452bcca73a2c1ae7a8d66c5d8a90e842ffe",
      "9e2ee8145e183e5f0323720eb90d228249304cc29b4c69c25aa04e8a510e7e3b",
      "6b1dee4551fefa2fbed337afaf7de4ba8a3413f21172ab4756fff586d990ec8e",
      "97225f34df369d66079b48b73639bb54cd749db50a18114f826a1a501c533ee2",
      "f93d588a031106bd8ffc107868915af9e5812e08d559a93f36645cbcc57d01a9",
      "357132d395e539e3632e94375dce23b074b7ac34521b13e9a5cc7148d9cf01d0",
      "c560ba1dcee2e57a2446b122bd61dc8f19afd77c64fbdda8c22017f9535f5b67",
      "5ef679d8deb1e54e260353d8141a4dc62b83fcd58395511c0963a50a7139a3b3",
      "73b9eb96a883db2213bb70a309d54a84bf90a776de7b1fc8fa02252787b4d1a2",
      "c05fcf5224404fd93ad4cf0a337b776988439d63c4afed75d30eb4adf0e4d803",
      "328e89a9bfabacb1816dc6f35d05b006fea6cccadbacdfbd28887cf41c4cdff7",
      "4e6bd6d962c35e6290a422272afc66c835b2957e0eb6a4c62229d306b734948a",
      "a3ad57b953456720fa8ba6a260436ae8c7ba04c6abb03e1414e2553cd166324c",
      "8f8a72f0d13259cc9f59309debd92069076eea5f01f98752624410b0f0f0bfe3",
      "f04d4530369fa0bd4383953f5afa7596ab6799188795b8e4d9a7a5181c751931",
      "565f348d0aed29525037a2605195f9c5bbff13a95d5704759c1ee8e05d3dec88",
      "c55e06acee4e9a79cbf8af5e18bdf24cbf8028a23777df9555425b5937893b1f",
      "269ebb41c8bde73f45d799155f2e116cd3f62a706f95d0af1dd8e5067a722cff",
      "2e1bcf42f895eda0b913fc7b2b2c0087041a882d0bffe967ccadc1b3b93dea26",
      "cf4f727f962288f9fd181f78a0824f8f312418d42944283cbc92d55614aa0120",
      "840881752bca63f719f698d41f0d4ad20430e875ee5154e832d0000acbd78127",
      "18d99e17b10b0ed3420680bb9e65e6401185cc8f76de724e184791c8dfc5de83",
      "2e0531c912074624bda0fdcd6a19d8a0b21910ae4075da4990b73f091c9977f9",
      "ff470bbe3725144129cf9bbded92222b0c213314256966136ccf9233333fb691",
      "3e98f9e68c8728892cf2c2d503c51c80aa09bce3edf086c149521ce515d3c783",
      "425b9cb8f57bd89e99b1f89fae41f6b65df4f6b1da1cd0f482f4f820651beced",
      "cedccf623192e3e35cf1d53cf6159d8b96a3f046b94ff190cdae013b5adec564",
      "48a24401e609514caf775960d6433eda2aed35285b737194ffa2a6192f4a72c6",
      "3bea5bd5e067d45f48d5deabc1fb9a3131896a0e28872562ccfbd53f4fb8e812",
      "94cbea9d358316b2d151b9a9024015bd7e4cb112f5415f9b8a3e82886c873aa8",
      "c87b7c7ab28a0f6fd379f64051291d603543e67e689d1b0f66570fa9d9a571f5",
      "ffee38ecb65d74e3805188370d780304dcabed86dd572ba5e741c13c7c5c5bda",
      "6ea469513611abc7d6098fdf215868e5e9cc6ada139698f1c05edd173e18fa27",
      "e432ac91c854a36c42d270985f72cafb47519dcfa18171eeae0aab56488b3b8a",
      "7ae0824044395f607146154348bbbe67ce46b2d382223c59359c681c41af2a67",
      "7b105627a76289b43abbacf708bbafed96be22025388c9fd36dc20ac8ce460e0",
      "2899f1282f52570f4577d5dbd4271e0b4ac817771272eea02adb6f3f636ffd3d",
      "52f99891c9a7fc8cf6cb11cb23d0b076dea29c473acb2b51d260cfa86061ddf3",
      "67a70054725cc1b72ecbe75beb0189074abd62fb666dc9db865c8cc956049b32",
      "d946eaac84c8824b1ba017d1e7a6e34b42528eb1db680fcdbf3ade1e187fb23f",
      "7ddd307b29d989295e8625b59c167c2acc8c694f287dbbfb61c13a3732a578f5",
      "e259b11e012eb3f13160d9bea75d441c8bf543d7aa864539da38fde7599f4f7e",
      "5a7778199c1ec2e4ca4977d8ecb1c9576ba8b173c4a837382b6a08705dc0c54f",
    ],
  },
}
`;

exports[`SwapperNodechainClient BTC getAddressBalance 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "confirmed": "750000000000",
    "unconfirmed": "0",
  },
}
`;

exports[`SwapperNodechainClient BTC getAddressUnspent 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Array [
    Object {
      "status": Object {
        "blockHeight": "1",
        "confirmed": true,
      },
      "txHash": "6f637d18b414a1e696b476939e9483d2bf4d4b0d9d0457b78d17c847cedfb3ce",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "2",
        "confirmed": true,
      },
      "txHash": "fee87a4c414b6d0c42a3e9f0f75902d43fa1635ed30fe85e33a847774d92623e",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "3",
        "confirmed": true,
      },
      "txHash": "58a43cf40d7d04f8739b3151210643914e5ec565ad45643c5687ac342098e9f3",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "4",
        "confirmed": true,
      },
      "txHash": "1d008ef45f4dd8d39fd9b79e1bb4cb108da15567511ec09246e97aeed8db96f8",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "5",
        "confirmed": true,
      },
      "txHash": "395bfeee300c9a5c7136206853e05cc834310407b7817535d8681051ed2bb633",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "6",
        "confirmed": true,
      },
      "txHash": "20d792489186f5399b6776d3f65c3eaa25bed0f288a033cdd291b120d9943a47",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "7",
        "confirmed": true,
      },
      "txHash": "5ca409f31d6c6063585546bfbf10f8ebe1652142adfc1525437d1884984851ce",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "8",
        "confirmed": true,
      },
      "txHash": "00ba1adcb76731de6d78a1453c3867486993b504645e8f38070fee9765657aa7",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "9",
        "confirmed": true,
      },
      "txHash": "033bc810730fc622252105aace5f9ae5c462d2f4ae433bc3bf9946f7033fd4f0",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "10",
        "confirmed": true,
      },
      "txHash": "b96905907e79263e115381fcd25d878a09f98d3e49ca338204d128c4a5c96814",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "11",
        "confirmed": true,
      },
      "txHash": "b17efd33c454d1f4f083bb54f513bdd2e2cdb714bb6d01862dc18f8963999735",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "12",
        "confirmed": true,
      },
      "txHash": "968d29d71d858074a925b117a155e85e5b95162640b3227183f24ac3d0c4d0af",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "13",
        "confirmed": true,
      },
      "txHash": "88f1c797cf1a50b7f53d2744ba774be68a9ba70d638742d56349422371ae195b",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "14",
        "confirmed": true,
      },
      "txHash": "ce20b43825a0c81e700ac6333c29c2f687cb6d533a50199b82e611591f95c4c3",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "15",
        "confirmed": true,
      },
      "txHash": "ed3f2f63ab16c8b9f6655b92886da82e40f8c80846c476179bd837b28a913f28",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "16",
        "confirmed": true,
      },
      "txHash": "6855f95c43382ab555cb6e0522e834f63edae3c303e2d8a9d35c042216d5c737",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "17",
        "confirmed": true,
      },
      "txHash": "20d5d6b2108bf1a998d8013ab3c046d95989e8a44565fb40295adcb00268da5f",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "18",
        "confirmed": true,
      },
      "txHash": "ea068d2bf76d591836dc4a63fad4bb14feaa9b2308b5b1f88dbd1fb2d996380c",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "19",
        "confirmed": true,
      },
      "txHash": "3a3ba6517f4303e7f85194fbcb00bfcea0f85c1c84e88d164f09967bd7bad1d8",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "20",
        "confirmed": true,
      },
      "txHash": "84ee151a5318298616f1bbd9391f52c347300cc3ee6d0fe81f44432205374607",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "21",
        "confirmed": true,
      },
      "txHash": "4576c9efec439fe8868787d46db1190c17be78d255a5d88e0dfcaf13088b2b8c",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "22",
        "confirmed": true,
      },
      "txHash": "5d8f38a0fe655c56a7f1ac5fe453398d7d2f4479417f199449c92a7347170006",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "23",
        "confirmed": true,
      },
      "txHash": "1c3c0a78030b5075a40a9cb7be4e4b09993b5c3c693b0b5b9a0e50f788c4ca08",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "24",
        "confirmed": true,
      },
      "txHash": "12885b0157589a908de899e968a72b848d3f7a735247257c7fda2b6cc83c0149",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "25",
        "confirmed": true,
      },
      "txHash": "06217d452005ddbe7b487bba74b1a3173fbc2b8b21be73869db04e5c1a9f373e",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "26",
        "confirmed": true,
      },
      "txHash": "3ec2666a62ee0ea13ba44178d152d48307dc6f37f538afe09a274f57ceaaf928",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "27",
        "confirmed": true,
      },
      "txHash": "150f93a4c149998d096e1c2edf5d51a20127d5e12f1418f1bc9ad16a0dfe77d6",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "28",
        "confirmed": true,
      },
      "txHash": "ee093198001c9d88f898215a35ce516af71e98dd55c32305a36da4ba17cadabe",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "29",
        "confirmed": true,
      },
      "txHash": "f3588237cc2c6461a013bcf97f5d3e07ba65e6e70255a87fd5636d201e6954cd",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "30",
        "confirmed": true,
      },
      "txHash": "31a21653ed090a3e5fc9e52aab12b8ce7af1ccea098db4167335893d5513706a",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "31",
        "confirmed": true,
      },
      "txHash": "a37c8add0f781b7810f21c06cd35e71ba1a4a40d138dfc15024738a4c50e7cb3",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "32",
        "confirmed": true,
      },
      "txHash": "7dbd1994a43943907247725337e1564ebb9076b24fd1ebc5ae9ec220034cb4b6",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "33",
        "confirmed": true,
      },
      "txHash": "4d6408b93d7a90d9005bd76dc2681b642fae8e36abf2978048dc5ff75d5aa48f",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "34",
        "confirmed": true,
      },
      "txHash": "14634fac17357c3b4af4037d26c4e00c15098e38cf2ff90874ece7a34e0b15d7",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "35",
        "confirmed": true,
      },
      "txHash": "276069b2242392ee9f2ff41012b6d7f9d35d3884ea4040d75901a418ef3e158b",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "36",
        "confirmed": true,
      },
      "txHash": "e3da73e049a10a4145c746d63aa26e3025169b4ad4261df627f1f544ab7cd6c2",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "37",
        "confirmed": true,
      },
      "txHash": "07fa6134ee5ac54bfd1f0e8951ce004d9be68d2dc036483d7093cf894911aa65",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "38",
        "confirmed": true,
      },
      "txHash": "8f35724e8dfe270531e00be1faa0da539c25a5a370888370034aa5568d39f2c9",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "39",
        "confirmed": true,
      },
      "txHash": "fe7485592351652e8fe439d1e9c0481bd00ca07a212986a19b41ac6e82636d45",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "40",
        "confirmed": true,
      },
      "txHash": "6f575046ab4d920a6ec8d833ba4b91cc59d1aa09a98583bfcdb3fc02475e507d",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "41",
        "confirmed": true,
      },
      "txHash": "138ce4620a031c2c3a193e8abe42398049308e844d15bbd7e37166a6bd3b9456",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "42",
        "confirmed": true,
      },
      "txHash": "39e9b363ad3b2db119db80ca95d58b72dd8d1848d57405fcf2ff5f0a8f61ba49",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "43",
        "confirmed": true,
      },
      "txHash": "4ce09252f9e7da2c2dc9ce750d41357c7922419ef12293299ddc12ab52a663a6",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "44",
        "confirmed": true,
      },
      "txHash": "b673715ebc0a33d30365b675bd4a2ab19e69798f609eb505a20700e8949e2bd8",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "45",
        "confirmed": true,
      },
      "txHash": "3fa844c3b39793e5a07f25df0c1ec4751feabd8cf7703aee4f18e9c633bfb43a",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "46",
        "confirmed": true,
      },
      "txHash": "06dd2b7905e09c7bc113ddd0a569baf8736cab0e7b5bdccda46b238c388447a7",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "47",
        "confirmed": true,
      },
      "txHash": "51d8f6e59b428de8d372778f3ec00113db065ef29b605eb328c483a48702852b",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "48",
        "confirmed": true,
      },
      "txHash": "61e5bad671c9bf157d5d35421684ec307d3976d51db604bbbac1d108ef0c1cbd",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "49",
        "confirmed": true,
      },
      "txHash": "23b0d15e8e845dcd13b786fcc41de0e1a1c95d78ef6008cc8ab4ef687520accf",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "50",
        "confirmed": true,
      },
      "txHash": "7547fcea470efe65ff86ccde72b7e8d6915bb639a9641c6128a4eb3ec06c41e3",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "51",
        "confirmed": true,
      },
      "txHash": "a3058cd5e453236e93737f144756cbecbc18b17920454176a8f094496b5e8f8f",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "52",
        "confirmed": true,
      },
      "txHash": "38c100df1d81702a7593bcdc0f96caf3fe2c248eaa72ab26b20a5fb8c4c9ddd6",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "53",
        "confirmed": true,
      },
      "txHash": "7e7ec1c6a5a7f72118175570111f89b20b7fee9dd5cef0bec50ebad39190b506",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "54",
        "confirmed": true,
      },
      "txHash": "75e3467fe3ec274871298a9a38fbf485a34f1e8747af025b45cb0c5164ed7372",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "55",
        "confirmed": true,
      },
      "txHash": "32da39c0bf26aaa6759baad81ab2ddef32c6a6d97742863fc017d68c5b758b95",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "56",
        "confirmed": true,
      },
      "txHash": "519ad3371582101171cb1073852220207564093f787fc4a6435e9d8bcf2fc55c",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "57",
        "confirmed": true,
      },
      "txHash": "43d2a04acda03e117448962e7f221a95c7d6335ad5254f0a81ec63a6d29208b7",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "58",
        "confirmed": true,
      },
      "txHash": "684f4f630b531ffd5ff73f2491e81ad7e7cfad74a3657630e12ad11afdefd702",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "59",
        "confirmed": true,
      },
      "txHash": "4850c1ce6f4d298ce418b488153c36c93cf245bd698bfc85645368825a5608b8",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "60",
        "confirmed": true,
      },
      "txHash": "348b2e3894861e8c50fc91bc11cac8c0b903dc4c8d787cb08a5c7fd89f755498",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "61",
        "confirmed": true,
      },
      "txHash": "0d2d4a51d0f6e5497cc57f8fd5026b90635efa3b475ac532b95969ee00c012c4",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "62",
        "confirmed": true,
      },
      "txHash": "d786d0974328280eaec322089011876f9c7a52114c0740b71ca8a415e35992e0",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "63",
        "confirmed": true,
      },
      "txHash": "e53a2aa2ca59f17583070e1f64ebc51f781a9b09c7b88c6e94c4a6ee77e07ba9",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "64",
        "confirmed": true,
      },
      "txHash": "7eb615327c46eaec3ca3b129f055446a9e487bbc09c11452b5bf755cb7727fca",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "65",
        "confirmed": true,
      },
      "txHash": "373d36dd6edb7ae81623ba2850a4fe054b793676315163530fb00664a85477d4",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "66",
        "confirmed": true,
      },
      "txHash": "5168634843a4cc82c29f6e2ffb722d826b5ebb537c4816051d3bdb5441deeb9c",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "67",
        "confirmed": true,
      },
      "txHash": "298075e2891653a011cdbbf366617d495d4bb3718e97007575895d352d539572",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "68",
        "confirmed": true,
      },
      "txHash": "f2aae0171e149e57a0658176e1d23ac87d441391c4ca530b7f90d52431ac3598",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "69",
        "confirmed": true,
      },
      "txHash": "1ea8ec56ee992cca5bd922149045e07949ddbb8a7b473fcc046c244fe17ff22f",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "70",
        "confirmed": true,
      },
      "txHash": "ccd96480a938640c137fed84ae0220c3dd7f98753a193d738e1a16bc684684da",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "71",
        "confirmed": true,
      },
      "txHash": "a7ddfa634c14eef2169be1b0c6d34d1c92c9daa9b1c0906330f9aa56cd90f072",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "72",
        "confirmed": true,
      },
      "txHash": "96fe1749044eb9faf82e085a357ae71a0e86c56026c7fac607cc7fa1cdd1a4b2",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "73",
        "confirmed": true,
      },
      "txHash": "56baaf36cf3d0d8a60ad0a3a6584a21f6b18743c5e86a12848d3ce792b0e670b",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "74",
        "confirmed": true,
      },
      "txHash": "0466a103cd84004e2d74d7111fa914a81ca9879e56f8526cdcdfbf46a5c3ebad",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "75",
        "confirmed": true,
      },
      "txHash": "637c8bf3c7c4e098eeab69f17b5b0c5203c4d6862caaf9a9d77042b77969f448",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "76",
        "confirmed": true,
      },
      "txHash": "8674672f48f28997870e02d1e50cd46cf1366134bc58696353208c7ffcb2a1c0",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "77",
        "confirmed": true,
      },
      "txHash": "418d231449135d1b2ffd0f8c1f5e42839ae265834e7a8fa34fb2af8522ffcbb3",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "78",
        "confirmed": true,
      },
      "txHash": "ada0de532d292b0c0848fff8f5e83e00b5726509d2c4689e197a7091b7d26f7a",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "79",
        "confirmed": true,
      },
      "txHash": "694ccf1202b56627d3d198d50ab311faa6e38db457337e1e7b4b70bacafd9273",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "80",
        "confirmed": true,
      },
      "txHash": "23c073e8ec5638a7a160b493b961aee35febbb1e8af0e877aa773b9ac099ba72",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "81",
        "confirmed": true,
      },
      "txHash": "b554409d43ae23a63bc6aa9cdc28872fcf5e302ba8546ba59b63104f41dce0dd",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "82",
        "confirmed": true,
      },
      "txHash": "25025e182d3a773f579e39d6519ec1ffffe60fc35fb4ab0c3cd132d8a66ed170",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "83",
        "confirmed": true,
      },
      "txHash": "d122b25a286194dae4f2fb4ac2485c6a9d52b64b5eb3e925d2258662b552d4ba",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "84",
        "confirmed": true,
      },
      "txHash": "9a05775aeed8ef370c87224bddb5bf8d810a296a5978f570f844b1f172b3abd8",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "85",
        "confirmed": true,
      },
      "txHash": "6facf06e60a5d759a41edaba8f34c0885578f965d86dbf93e65cc85d76b97081",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "86",
        "confirmed": true,
      },
      "txHash": "78de3b7373f99a9386d85e0e76b99b7f9c7e0d3dd90851c28360430584de76ff",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "87",
        "confirmed": true,
      },
      "txHash": "de6662f5b5d00d5b5fdd6fdc5b0cfe196c883b8d38f67e1c0a62d15cf02c1aef",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "88",
        "confirmed": true,
      },
      "txHash": "961077322d099a0ba7baa4cd1819fcc27b6552c2cd6c755706460e7361e1ad3a",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "89",
        "confirmed": true,
      },
      "txHash": "68ba7234b165ddfc884225fb274f713750abf6bd6c7deb1c5fe2b56c1f279f84",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "90",
        "confirmed": true,
      },
      "txHash": "9eadd82ee81195ec2eba67dad6a2ea29569ba67a095d888766a8e1a57d86bfcc",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "91",
        "confirmed": true,
      },
      "txHash": "a30a7841fc5e6676714e183eaa8a13110a7a1672a4b3017df93a6aa10a7d2e2b",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "92",
        "confirmed": true,
      },
      "txHash": "beb7b67b6f1eeaf01cecd8ead4afb4c6df6867cbb591b6827118fd9521485d21",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "93",
        "confirmed": true,
      },
      "txHash": "a5d957be1a09b597347826ebd877ffdc46076222523aad405ecd7cdedd0e5691",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "94",
        "confirmed": true,
      },
      "txHash": "aaa5886dd2d72f12ba3f2f1308ac034a5d718286dffeec2feff4ed1816e38d77",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "95",
        "confirmed": true,
      },
      "txHash": "b57f6e6add2a67114845f62bebfe6e696b416d0947262094877057d94b6a6c71",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "96",
        "confirmed": true,
      },
      "txHash": "4130a23b3f9248632126964acd7ada2bd3ca4c179526b4f4624d12def82c248a",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "97",
        "confirmed": true,
      },
      "txHash": "aa76d8152975cc6362a7fdd866db3daa878acdf6a8f8789d5ef631a9df3d1f05",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "98",
        "confirmed": true,
      },
      "txHash": "a72c0a8a0636d310acc1b6729fb43c4d6d4db9a4f04ab54544870a8271c67e38",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "99",
        "confirmed": true,
      },
      "txHash": "361eaed0cddc8aa549cda234cf379427a7f271a7c2161d3f686428c6c0866101",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "100",
        "confirmed": true,
      },
      "txHash": "a2489a7791414f9ce5466fb48cdb220d61acbec271f47028dc5f55f34ebe0098",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "101",
        "confirmed": true,
      },
      "txHash": "b94a11602b7410675ea221ec265b874b39d5066360b5f30f67008e3f83c4ab4e",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "102",
        "confirmed": true,
      },
      "txHash": "dbc262dd737169f8f5592e2cd6e4074885d2684ae55cef5dbe86f5a35d3476cc",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "103",
        "confirmed": true,
      },
      "txHash": "b6a4b89bfa1739ec0e8a74b671aad038460a3f3536efe327ed84782391aafa1d",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "104",
        "confirmed": true,
      },
      "txHash": "07daa1175296cc1fe5fc162acf7190720fe82dd10dd19244b9023531334084cf",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "105",
        "confirmed": true,
      },
      "txHash": "1faf61be1a1139c2533df9b836e48ae1a4ab6224db071460285e6d0bbf09fef2",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "106",
        "confirmed": true,
      },
      "txHash": "694a7c92f47fad22c5d057da13a6c854a2a21377ca8c02c4eadaffe50be38eb0",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "107",
        "confirmed": true,
      },
      "txHash": "fed193bc95d5f480e646911d1385eea455b07586172d781d9fe568a9e9f3c96c",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "108",
        "confirmed": true,
      },
      "txHash": "475abf2e5d0689d442369eb280d387885ce75d64854234ce36e50b9b365698be",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "109",
        "confirmed": true,
      },
      "txHash": "4618cedb277263bdc1ae247b07785452bcca73a2c1ae7a8d66c5d8a90e842ffe",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "110",
        "confirmed": true,
      },
      "txHash": "9e2ee8145e183e5f0323720eb90d228249304cc29b4c69c25aa04e8a510e7e3b",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "111",
        "confirmed": true,
      },
      "txHash": "6b1dee4551fefa2fbed337afaf7de4ba8a3413f21172ab4756fff586d990ec8e",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "112",
        "confirmed": true,
      },
      "txHash": "97225f34df369d66079b48b73639bb54cd749db50a18114f826a1a501c533ee2",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "113",
        "confirmed": true,
      },
      "txHash": "f93d588a031106bd8ffc107868915af9e5812e08d559a93f36645cbcc57d01a9",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "114",
        "confirmed": true,
      },
      "txHash": "357132d395e539e3632e94375dce23b074b7ac34521b13e9a5cc7148d9cf01d0",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "115",
        "confirmed": true,
      },
      "txHash": "c560ba1dcee2e57a2446b122bd61dc8f19afd77c64fbdda8c22017f9535f5b67",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "116",
        "confirmed": true,
      },
      "txHash": "5ef679d8deb1e54e260353d8141a4dc62b83fcd58395511c0963a50a7139a3b3",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "117",
        "confirmed": true,
      },
      "txHash": "73b9eb96a883db2213bb70a309d54a84bf90a776de7b1fc8fa02252787b4d1a2",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "118",
        "confirmed": true,
      },
      "txHash": "c05fcf5224404fd93ad4cf0a337b776988439d63c4afed75d30eb4adf0e4d803",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "119",
        "confirmed": true,
      },
      "txHash": "328e89a9bfabacb1816dc6f35d05b006fea6cccadbacdfbd28887cf41c4cdff7",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "120",
        "confirmed": true,
      },
      "txHash": "4e6bd6d962c35e6290a422272afc66c835b2957e0eb6a4c62229d306b734948a",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "121",
        "confirmed": true,
      },
      "txHash": "a3ad57b953456720fa8ba6a260436ae8c7ba04c6abb03e1414e2553cd166324c",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "122",
        "confirmed": true,
      },
      "txHash": "8f8a72f0d13259cc9f59309debd92069076eea5f01f98752624410b0f0f0bfe3",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "123",
        "confirmed": true,
      },
      "txHash": "f04d4530369fa0bd4383953f5afa7596ab6799188795b8e4d9a7a5181c751931",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "124",
        "confirmed": true,
      },
      "txHash": "565f348d0aed29525037a2605195f9c5bbff13a95d5704759c1ee8e05d3dec88",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "125",
        "confirmed": true,
      },
      "txHash": "c55e06acee4e9a79cbf8af5e18bdf24cbf8028a23777df9555425b5937893b1f",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "126",
        "confirmed": true,
      },
      "txHash": "269ebb41c8bde73f45d799155f2e116cd3f62a706f95d0af1dd8e5067a722cff",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "127",
        "confirmed": true,
      },
      "txHash": "2e1bcf42f895eda0b913fc7b2b2c0087041a882d0bffe967ccadc1b3b93dea26",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "128",
        "confirmed": true,
      },
      "txHash": "cf4f727f962288f9fd181f78a0824f8f312418d42944283cbc92d55614aa0120",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "129",
        "confirmed": true,
      },
      "txHash": "840881752bca63f719f698d41f0d4ad20430e875ee5154e832d0000acbd78127",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "130",
        "confirmed": true,
      },
      "txHash": "18d99e17b10b0ed3420680bb9e65e6401185cc8f76de724e184791c8dfc5de83",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "131",
        "confirmed": true,
      },
      "txHash": "2e0531c912074624bda0fdcd6a19d8a0b21910ae4075da4990b73f091c9977f9",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "132",
        "confirmed": true,
      },
      "txHash": "ff470bbe3725144129cf9bbded92222b0c213314256966136ccf9233333fb691",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "133",
        "confirmed": true,
      },
      "txHash": "3e98f9e68c8728892cf2c2d503c51c80aa09bce3edf086c149521ce515d3c783",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "134",
        "confirmed": true,
      },
      "txHash": "425b9cb8f57bd89e99b1f89fae41f6b65df4f6b1da1cd0f482f4f820651beced",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "135",
        "confirmed": true,
      },
      "txHash": "cedccf623192e3e35cf1d53cf6159d8b96a3f046b94ff190cdae013b5adec564",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "136",
        "confirmed": true,
      },
      "txHash": "48a24401e609514caf775960d6433eda2aed35285b737194ffa2a6192f4a72c6",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "137",
        "confirmed": true,
      },
      "txHash": "3bea5bd5e067d45f48d5deabc1fb9a3131896a0e28872562ccfbd53f4fb8e812",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "138",
        "confirmed": true,
      },
      "txHash": "94cbea9d358316b2d151b9a9024015bd7e4cb112f5415f9b8a3e82886c873aa8",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "139",
        "confirmed": true,
      },
      "txHash": "c87b7c7ab28a0f6fd379f64051291d603543e67e689d1b0f66570fa9d9a571f5",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "140",
        "confirmed": true,
      },
      "txHash": "ffee38ecb65d74e3805188370d780304dcabed86dd572ba5e741c13c7c5c5bda",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "141",
        "confirmed": true,
      },
      "txHash": "6ea469513611abc7d6098fdf215868e5e9cc6ada139698f1c05edd173e18fa27",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "142",
        "confirmed": true,
      },
      "txHash": "e432ac91c854a36c42d270985f72cafb47519dcfa18171eeae0aab56488b3b8a",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "143",
        "confirmed": true,
      },
      "txHash": "7ae0824044395f607146154348bbbe67ce46b2d382223c59359c681c41af2a67",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "144",
        "confirmed": true,
      },
      "txHash": "7b105627a76289b43abbacf708bbafed96be22025388c9fd36dc20ac8ce460e0",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "145",
        "confirmed": true,
      },
      "txHash": "2899f1282f52570f4577d5dbd4271e0b4ac817771272eea02adb6f3f636ffd3d",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "146",
        "confirmed": true,
      },
      "txHash": "52f99891c9a7fc8cf6cb11cb23d0b076dea29c473acb2b51d260cfa86061ddf3",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "147",
        "confirmed": true,
      },
      "txHash": "67a70054725cc1b72ecbe75beb0189074abd62fb666dc9db865c8cc956049b32",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "148",
        "confirmed": true,
      },
      "txHash": "d946eaac84c8824b1ba017d1e7a6e34b42528eb1db680fcdbf3ade1e187fb23f",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "149",
        "confirmed": true,
      },
      "txHash": "7ddd307b29d989295e8625b59c167c2acc8c694f287dbbfb61c13a3732a578f5",
      "value": "5000000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "150",
        "confirmed": true,
      },
      "txHash": "e259b11e012eb3f13160d9bea75d441c8bf543d7aa864539da38fde7599f4f7e",
      "value": "2500000000",
      "vout": "0",
    },
    Object {
      "status": Object {
        "blockHeight": "151",
        "confirmed": true,
      },
      "txHash": "5a7778199c1ec2e4ca4977d8ecb1c9576ba8b173c4a837382b6a08705dc0c54f",
      "value": "2500000000",
      "vout": "0",
    },
  ],
}
`;

exports[`SwapperNodechainClient BTC getAddressesBalance 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Array [
    Object {
      "address": "bcrt1q97ww9v8ux5m9s6lsgdnzpcue0q2a6t80f9hntr",
      "balance": Object {
        "confirmed": "750000000000",
        "unconfirmed": "0",
      },
    },
    Object {
      "address": "bcrt1qkhn06ef3m56rfphg8e4ujdtze06q82l3sczse7",
      "balance": Object {
        "confirmed": "25000000000",
        "unconfirmed": "0",
      },
    },
  ],
}
`;

exports[`SwapperNodechainClient BTC getBlockByHash 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "bits": "207fffff",
    "chainwork": "0000000000000000000000000000000000000000000000000000000000000130",
    "confirmations": 11,
    "difficulty": 4.656542373906925e-10,
    "hash": "009c7b7d91388c42c48eb136c06111b1179fd5b5241d7af339c54cb27632f8ce",
    "height": 151,
    "mediantime": 1635762176,
    "merkleroot": "5a7778199c1ec2e4ca4977d8ecb1c9576ba8b173c4a837382b6a08705dc0c54f",
    "nTx": 1,
    "nextblockhash": "7caed950593355781af6f37f6a0ba9d1afa04d73f40d1da77e163cd5e1ab29fb",
    "nonce": 1,
    "previousblockhash": "5b826153a8903d4baae5c15f8297f76e08df46e4b3b5f43c8137a4051288d322",
    "size": 251,
    "strippedsize": 215,
    "time": 1635762176,
    "tx": Array [
      Object {
        "hash": "c98d3064861e702e5b1ba847ba52bf6ea14d3043b531b88ebdb74f90435137dd",
        "hex": "020000000001010000000000000000000000000000000000000000000000000000000000000000ffffffff050297000101ffffffff0200f90295000000001600142f9ce2b0fc3536586bf0436620e3997815dd2cef0000000000000000266a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf90120000000000000000000000000000000000000000000000000000000000000000000000000",
        "locktime": 0,
        "size": 170,
        "txid": "5a7778199c1ec2e4ca4977d8ecb1c9576ba8b173c4a837382b6a08705dc0c54f",
        "version": 2,
        "vin": Array [
          Object {
            "coinbase": "0297000101",
            "sequence": 4294967295,
            "txinwitness": Array [
              "0000000000000000000000000000000000000000000000000000000000000000",
            ],
          },
        ],
        "vout": Array [
          Object {
            "n": 0,
            "scriptPubKey": Object {
              "addresses": Array [
                "bcrt1q97ww9v8ux5m9s6lsgdnzpcue0q2a6t80f9hntr",
              ],
              "asm": "0 2f9ce2b0fc3536586bf0436620e3997815dd2cef",
              "hex": "00142f9ce2b0fc3536586bf0436620e3997815dd2cef",
              "reqSigs": 1,
              "type": "witness_v0_keyhash",
            },
            "value": 25,
          },
          Object {
            "n": 1,
            "scriptPubKey": Object {
              "asm": "OP_RETURN aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
              "hex": "6a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
              "type": "nulldata",
            },
            "value": 0,
          },
        ],
        "vsize": 143,
        "weight": 572,
      },
    ],
    "version": 805306368,
    "versionHex": "30000000",
    "weight": 896,
  },
}
`;

exports[`SwapperNodechainClient BTC getBlockByHash 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "bits": "207fffff",
    "chainwork": "0000000000000000000000000000000000000000000000000000000000000130",
    "confirmations": 1,
    "difficulty": 4.656542373906925e-10,
    "hash": "009c7b7d91388c42c48eb136c06111b1179fd5b5241d7af339c54cb27632f8ce",
    "height": 151,
    "mediantime": 1635762176,
    "merkleroot": "5a7778199c1ec2e4ca4977d8ecb1c9576ba8b173c4a837382b6a08705dc0c54f",
    "nTx": 1,
    "nonce": 1,
    "previousblockhash": "5b826153a8903d4baae5c15f8297f76e08df46e4b3b5f43c8137a4051288d322",
    "size": 251,
    "strippedsize": 215,
    "time": 1635762176,
    "tx": Array [
      Object {
        "hash": "c98d3064861e702e5b1ba847ba52bf6ea14d3043b531b88ebdb74f90435137dd",
        "hex": "020000000001010000000000000000000000000000000000000000000000000000000000000000ffffffff050297000101ffffffff0200f90295000000001600142f9ce2b0fc3536586bf0436620e3997815dd2cef0000000000000000266a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf90120000000000000000000000000000000000000000000000000000000000000000000000000",
        "locktime": 0,
        "size": 170,
        "txid": "5a7778199c1ec2e4ca4977d8ecb1c9576ba8b173c4a837382b6a08705dc0c54f",
        "version": 2,
        "vin": Array [
          Object {
            "coinbase": "0297000101",
            "sequence": 4294967295,
            "txinwitness": Array [
              "0000000000000000000000000000000000000000000000000000000000000000",
            ],
          },
        ],
        "vout": Array [
          Object {
            "n": 0,
            "scriptPubKey": Object {
              "addresses": Array [
                "bcrt1q97ww9v8ux5m9s6lsgdnzpcue0q2a6t80f9hntr",
              ],
              "asm": "0 2f9ce2b0fc3536586bf0436620e3997815dd2cef",
              "hex": "00142f9ce2b0fc3536586bf0436620e3997815dd2cef",
              "reqSigs": 1,
              "type": "witness_v0_keyhash",
            },
            "value": 25,
          },
          Object {
            "n": 1,
            "scriptPubKey": Object {
              "asm": "OP_RETURN aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
              "hex": "6a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
              "type": "nulldata",
            },
            "value": 0,
          },
        ],
        "vsize": 143,
        "weight": 572,
      },
    ],
    "version": 805306368,
    "versionHex": "30000000",
    "weight": 896,
  },
}
`;

exports[`SwapperNodechainClient BTC getBlockByNumber 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "bits": "207fffff",
    "chainwork": "0000000000000000000000000000000000000000000000000000000000000004",
    "confirmations": 161,
    "difficulty": 4.656542373906925e-10,
    "hash": "6c085e9ff9ec09045f09c39d016319aea95f43f416279bccf7d43d69494dc067",
    "height": 1,
    "mediantime": 1635762150,
    "merkleroot": "6f637d18b414a1e696b476939e9483d2bf4d4b0d9d0457b78d17c847cedfb3ce",
    "nTx": 1,
    "nextblockhash": "3130aeb810f7d04c6d7cdc2a36b879e955eab5df1042ac37b80c40d6249bc271",
    "nonce": 1,
    "previousblockhash": "0f9188f13cb7b2c71f2a335e3a4fc328bf5beb436012afca590b1a11466e2206",
    "size": 249,
    "strippedsize": 213,
    "time": 1635762150,
    "tx": Array [
      Object {
        "hash": "cdc8978f472711125c28f96b707ff53e8fb56fd3286e17578c456f69516ef4a0",
        "hex": "020000000001010000000000000000000000000000000000000000000000000000000000000000ffffffff03510101ffffffff0200f2052a010000001600142f9ce2b0fc3536586bf0436620e3997815dd2cef0000000000000000266a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf90120000000000000000000000000000000000000000000000000000000000000000000000000",
        "locktime": 0,
        "size": 168,
        "txid": "6f637d18b414a1e696b476939e9483d2bf4d4b0d9d0457b78d17c847cedfb3ce",
        "version": 2,
        "vin": Array [
          Object {
            "coinbase": "510101",
            "sequence": 4294967295,
            "txinwitness": Array [
              "0000000000000000000000000000000000000000000000000000000000000000",
            ],
          },
        ],
        "vout": Array [
          Object {
            "n": 0,
            "scriptPubKey": Object {
              "addresses": Array [
                "bcrt1q97ww9v8ux5m9s6lsgdnzpcue0q2a6t80f9hntr",
              ],
              "asm": "0 2f9ce2b0fc3536586bf0436620e3997815dd2cef",
              "hex": "00142f9ce2b0fc3536586bf0436620e3997815dd2cef",
              "reqSigs": 1,
              "type": "witness_v0_keyhash",
            },
            "value": 50,
          },
          Object {
            "n": 1,
            "scriptPubKey": Object {
              "asm": "OP_RETURN aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
              "hex": "6a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
              "type": "nulldata",
            },
            "value": 0,
          },
        ],
        "vsize": 141,
        "weight": 564,
      },
    ],
    "version": 536870912,
    "versionHex": "20000000",
    "weight": 888,
  },
}
`;

exports[`SwapperNodechainClient BTC getHeight 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "latestBlockHash": "2edd7f49cf16cccfa92a3590e37e59d95b6136b553c3088d732f7d53952db50f",
    "latestBlockIndex": 161,
  },
}
`;

exports[`SwapperNodechainClient BTC getTransaction 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "hash": "cdc8978f472711125c28f96b707ff53e8fb56fd3286e17578c456f69516ef4a0",
    "locktime": 0,
    "size": 168,
    "txid": "6f637d18b414a1e696b476939e9483d2bf4d4b0d9d0457b78d17c847cedfb3ce",
    "version": 2,
    "vin": Array [
      Object {
        "coinbase": "510101",
        "sequence": 4294967295,
        "txinwitness": Array [
          "0000000000000000000000000000000000000000000000000000000000000000",
        ],
      },
    ],
    "vout": Array [
      Object {
        "n": 0,
        "scriptPubKey": Object {
          "addresses": Array [
            "bcrt1q97ww9v8ux5m9s6lsgdnzpcue0q2a6t80f9hntr",
          ],
          "asm": "0 2f9ce2b0fc3536586bf0436620e3997815dd2cef",
          "hex": "00142f9ce2b0fc3536586bf0436620e3997815dd2cef",
          "reqSigs": 1,
          "type": "witness_v0_keyhash",
        },
        "value": 50,
      },
      Object {
        "n": 1,
        "scriptPubKey": Object {
          "asm": "OP_RETURN aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
          "hex": "6a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
          "type": "nulldata",
        },
        "value": 0,
      },
    ],
    "vsize": 141,
    "weight": 564,
  },
}
`;

exports[`SwapperNodechainClient BTC getTransactionCount 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "transactionCount": "0",
  },
}
`;

exports[`SwapperNodechainClient BTC getTransactionCount 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "bits": "207fffff",
    "chainwork": "0000000000000000000000000000000000000000000000000000000000000130",
    "confirmations": 1,
    "difficulty": 4.656542373906925e-10,
    "hash": "009c7b7d91388c42c48eb136c06111b1179fd5b5241d7af339c54cb27632f8ce",
    "height": 151,
    "mediantime": 1635762176,
    "merkleroot": "5a7778199c1ec2e4ca4977d8ecb1c9576ba8b173c4a837382b6a08705dc0c54f",
    "nTx": 1,
    "nonce": 1,
    "previousblockhash": "5b826153a8903d4baae5c15f8297f76e08df46e4b3b5f43c8137a4051288d322",
    "size": 251,
    "strippedsize": 215,
    "time": 1635762176,
    "tx": Array [
      Object {
        "hash": "c98d3064861e702e5b1ba847ba52bf6ea14d3043b531b88ebdb74f90435137dd",
        "hex": "020000000001010000000000000000000000000000000000000000000000000000000000000000ffffffff050297000101ffffffff0200f90295000000001600142f9ce2b0fc3536586bf0436620e3997815dd2cef0000000000000000266a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf90120000000000000000000000000000000000000000000000000000000000000000000000000",
        "locktime": 0,
        "size": 170,
        "txid": "5a7778199c1ec2e4ca4977d8ecb1c9576ba8b173c4a837382b6a08705dc0c54f",
        "version": 2,
        "vin": Array [
          Object {
            "coinbase": "0297000101",
            "sequence": 4294967295,
            "txinwitness": Array [
              "0000000000000000000000000000000000000000000000000000000000000000",
            ],
          },
        ],
        "vout": Array [
          Object {
            "n": 0,
            "scriptPubKey": Object {
              "addresses": Array [
                "bcrt1q97ww9v8ux5m9s6lsgdnzpcue0q2a6t80f9hntr",
              ],
              "asm": "0 2f9ce2b0fc3536586bf0436620e3997815dd2cef",
              "hex": "00142f9ce2b0fc3536586bf0436620e3997815dd2cef",
              "reqSigs": 1,
              "type": "witness_v0_keyhash",
            },
            "value": 25,
          },
          Object {
            "n": 1,
            "scriptPubKey": Object {
              "asm": "OP_RETURN aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
              "hex": "6a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf9",
              "type": "nulldata",
            },
            "value": 0,
          },
        ],
        "vsize": 143,
        "weight": 572,
      },
    ],
    "version": 805306368,
    "versionHex": "30000000",
    "weight": 896,
  },
}
`;

exports[`SwapperNodechainClient BTC getTransactionHex 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "rawTransaction": "020000000001010000000000000000000000000000000000000000000000000000000000000000ffffffff03510101ffffffff0200f2052a010000001600142f9ce2b0fc3536586bf0436620e3997815dd2cef0000000000000000266a24aa21a9ede2f61c3f71d1defd3fa999dfa36953755c690689799962b48bebd836974e8cf90120000000000000000000000000000000000000000000000000000000000000000000000000",
  },
}
`;

exports[`SwapperNodechainClient ETH broadcastTransaction 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "broadcasted": "0xe53a38c00f43f001e106aa6d2fc24df2ab56a5c441cfc90d0bcf68fa69d919a6",
  },
}
`;

exports[`SwapperNodechainClient ETH estimateGas 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "estimatedGas": "0x5208",
  },
}
`;

exports[`SwapperNodechainClient ETH getAddressBalance 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "confirmed": "0x56bc75e2d630e13d0",
    "unconfirmed": "0x0",
  },
}
`;

exports[`SwapperNodechainClient ETH getAddressesBalance 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Array [
    Object {
      "address": "0x625ACaEdeF812d2842eFd2Fb0294682A868455bd",
      "balance": Object {
        "confirmed": "0x56bc75e2d630e13d0",
        "unconfirmed": "0x0",
      },
    },
    Object {
      "address": "0x93261B4021dbd6200Df9B36B151f4ECF34889e94",
      "balance": Object {
        "confirmed": "0x56bc75e2d63100000",
        "unconfirmed": "0x0",
      },
    },
  ],
}
`;

exports[`SwapperNodechainClient ETH getAddressesBalance 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Array [
    Object {
      "address": "0x625ACaEdeF812d2842eFd2Fb0294682A868455bd",
      "balance": Object {
        "confirmed": "0x56bc75e2d630e13d0",
        "unconfirmed": "0x0",
      },
    },
    Object {
      "address": "0x93261B4021dbd6200Df9B36B151f4ECF34889e94",
      "balance": Object {
        "confirmed": "0x56bc75e2d63100000",
        "unconfirmed": "0x0",
      },
    },
  ],
}
`;

exports[`SwapperNodechainClient ETH getBlockByHash 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "transactions": Array [
      Object {
        "blockHash": "0x18bfb01b9291729857e8ee107fd01f62e71ca541ed435c23ee0e251461a5dbef",
        "blockNumber": "0x1",
        "from": "0x625acaedef812d2842efd2fb0294682a868455bd",
        "gas": "0x1e8480",
        "gasPrice": "0x1",
        "hash": "0x79da292ea6565c1a28b21b880ec89202dea1965eaa8bc61ee1368d3d5430c599",
        "input": "0x",
        "nonce": "0x0",
        "r": "0x4a9d68d06878d717dffed82ab8ec8607c2d71937f9be7f20d808c6ae80fc7e5c",
        "s": "0x69123f42ccfc584c1d56a4c2c9433bff90190a93e8de817c55c140759788fdeb",
        "to": "0x625acaedef812d2842efd2fb0294682a868455bd",
        "transactionIndex": "0x0",
        "v": "0x29",
        "value": "0x0",
      },
    ],
  },
}
`;

exports[`SwapperNodechainClient ETH getBlockByNumber 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "transactions": Array [
      Object {
        "blockHash": "0x18bfb01b9291729857e8ee107fd01f62e71ca541ed435c23ee0e251461a5dbef",
        "blockNumber": "0x1",
        "from": "0x625acaedef812d2842efd2fb0294682a868455bd",
        "gas": "0x1e8480",
        "gasPrice": "0x1",
        "hash": "0x79da292ea6565c1a28b21b880ec89202dea1965eaa8bc61ee1368d3d5430c599",
        "input": "0x",
        "nonce": "0x0",
        "r": "0x4a9d68d06878d717dffed82ab8ec8607c2d71937f9be7f20d808c6ae80fc7e5c",
        "s": "0x69123f42ccfc584c1d56a4c2c9433bff90190a93e8de817c55c140759788fdeb",
        "to": "0x625acaedef812d2842efd2fb0294682a868455bd",
        "transactionIndex": "0x0",
        "v": "0x29",
        "value": "0x0",
      },
    ],
  },
}
`;

exports[`SwapperNodechainClient ETH getGasPrice 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "gasPrice": "0x4a817c800",
  },
}
`;

exports[`SwapperNodechainClient ETH getHeight 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "latestBlockHash": "0x97af82717ff76daebfdf175bf89db376e18313a6e3b827be8e57da13fbbde5c1",
    "latestBlockIndex": "0x6",
  },
}
`;

exports[`SwapperNodechainClient ETH getTransaction 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "inputs": Array [
      Object {
        "address": "0x625acaedef812d2842efd2fb0294682a868455bd",
        "amount": "0x0",
      },
    ],
    "outputs": Array [
      Object {
        "address": "0x625acaedef812d2842efd2fb0294682a868455bd",
        "amount": "0x0",
      },
    ],
    "transaction": Object {
      "blockHash": "0xad5b1747a8233dbb1e0ca2a73c5453545e2855b2a7a6f49525056da6701dae9b",
      "blockNumber": "0x2",
      "from": "0x625acaedef812d2842efd2fb0294682a868455bd",
      "gas": "0x1e8480",
      "gasPrice": "0x1",
      "hash": "0xc410800b56e69e14cff5171c5df3de7d0e8602f85a61513ee6e0717a736fac39",
      "input": "0x",
      "nonce": "0x1",
      "r": "0x57b4899d136d99296ea8a2ce375ec7e6e6219ed3be99982ad7e6413d053a31ac",
      "s": "0x245a09c97750e4ffa466bf4b727cd675469b9b9294370fb0384083781fe8f503",
      "to": "0x625acaedef812d2842efd2fb0294682a868455bd",
      "transactionIndex": "0x0",
      "v": "0x29",
      "value": "0x0",
    },
  },
}
`;

exports[`SwapperNodechainClient ETH getTransactionCount 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "transactionCount": "0x6",
  },
}
`;

exports[`SwapperNodechainClient ETH getTransactionReceipt 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "blockHash": "0xad5b1747a8233dbb1e0ca2a73c5453545e2855b2a7a6f49525056da6701dae9b",
    "blockNumber": "0x2",
    "contractAddress": null,
    "cumulativeGasUsed": "0x5208",
    "from": "0x625acaedef812d2842efd2fb0294682a868455bd",
    "gasUsed": "0x5208",
    "logs": Array [],
    "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "status": "0x1",
    "to": "0x625acaedef812d2842efd2fb0294682a868455bd",
    "transactionHash": "0xc410800b56e69e14cff5171c5df3de7d0e8602f85a61513ee6e0717a736fac39",
    "transactionIndex": "0x0",
  },
}
`;
